Fixed bug (segfault while build with zts and GOTO vm-kind)

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.3.16
 
 - Core:
+  . Fixed bug (segfault while build with zts and GOTO vm-kind). (Laruence)
   . Fixed bug #62763 (register_shutdown_function and extending class). 
     (Laruence)
   . Fixed bug #62744 (dangling pointers made by zend_disable_class). (Laruence)
