Fixed defective cloning in ext/intl classes
See also bug #62915

Cherry picked from 886a50a (I forgot about 5.3)

Conflicts:
	ext/intl/spoofchecker/spoofchecker_class.c
	ext/intl/transliterator/transliterator_class.c

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ PHP                                                                        NEWS
 
 - Intl:
   . Fix null pointer dereferences in some classes of ext/intl. (Gustavo)
+  . Fix bug #62915 (defective cloning in several intl classes). (Gustavo)
 
 - MySQLnd:
   . Fixed bug #62885 (mysqli_poll - Segmentation fault). (Laruence)
