Fixed bug #50997 (SOAP Error when trying to submit 2nd Element of a choice).

--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,10 @@ PHP                                                                        NEWS
 - Session:
   . Fixed bug (segfault due to retval is not initialized). (Laruence)
 
+- SOAP
+  . Fixed bug #50997 (SOAP Error when trying to submit 2nd Element of a choice).
+    (Dmitry)
+
 - SPL:
   . Bug #62987 (Assigning to ArrayObject[null][something] overrides all 
     undefined variables). (Laruence)
