--- a/NEWS
+++ b/NEWS
@@ -7,10 +7,11 @@ PHP                                                                        NEWS
     (Niklas Lindgren).
 
 - Core:
-  . Fixed bug #63093 (Segfault while load extension failed in zts-build).
-    (Laruence)
   . Added optional second argument for assert() to specify custom message. Patch
     by Lonny Kapelushnik (lonny@lonnylot.com). (Lars)
+  . Support building PHP with the native client toolchain. (Stuart Langley)
+  . Fixed bug #63093 (Segfault while load extension failed in zts-build).
+    (Laruence)
   . Fixed bug #62976 (Notice: could not be converted to int when comparing
     some builtin classes). (Laruence)
   . Fixed bug #62955 (Only one directive is loaded from "Per Directory Values" 
