- Fixed bug #62887 (Only /status?plain&full gives "last request cpu")

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ PHP                                                                        NEWS
   . Fixed bug #62886 (PHP-FPM may segfault/hang on startup). (fat)
   . Fixed bug #63085 (Systemd integration and daemonize). (remi, fat)
   . Fixed bug #62947 (Unneccesary warnings on FPM). (fat)
+  . Fixed bug #62887 (Only /status?plain&full gives "last request cpu"). (fat)
 
 - Intl:
   . Fix bug #62915 (defective cloning in several intl classes). (Gustavo)
