--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ PHP                                                                        NEWS
   . Fixed bug #63085 (Systemd integration and daemonize). (remi, fat)
   . Fixed bug #62947 (Unneccesary warnings on FPM). (fat)
   . Fixed bug #62887 (Only /status?plain&full gives "last request cpu"). (fat)
+  . Fixed bug #62216 (Add PID to php-fpm init.d script). (fat)
 
 - Intl:
   . Fix bug #62915 (defective cloning in several intl classes). (Gustavo)
