--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-04 Oct 2012, PHP 5.3.18RC1
+18 Oct 2012, PHP 5.3.18
 
 - Core:
   . Fixed bug #63111 (is_callable() lies for abstract static method). (Dmitry)
