--- a/NEWS
+++ b/NEWS
@@ -13,10 +13,7 @@ PHP                                                                        NEWS
   . Fixed bug #63240 (stream_get_line() return contains delimiter string).
     (Tjerk, Gustavo)
 
-?? ??? 2012, PHP 5.3.18
-
-(NOTE: Add your entries above for 5.3.19, entries for 5.3.18 should only
-be added after merge by RM)
+18 Oct 2012, PHP 5.3.18
 
 - Core:
   . Fixed bug #63111 (is_callable() lies for abstract static method). (Dmitry)
