Fixed bug #63297 Phar fails to write an openssl based signature
Unitialized values warnings seem to be everyday life
when working with openssl. For more read
http://www.openssl.org/support/faq.html#PROG13
So just fixing so the bug, no care about those
warnings.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,10 @@ PHP                                                                        NEWS
   . Fixed bug #63240 (stream_get_line() return contains delimiter string).
     (Tjerk, Gustavo)
 
+- Phar:
+  . Fixed bug #63297 (Phar fails to write an openssl based signature).
+    (Anatoliy)
+
 18 Oct 2012, PHP 5.3.18
 
 - Core:
