--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2012, PHP 5.3.19
 
+- Core
+  . Fixed bug #63241 PHP fails to open Windows deduplicated files.
+    (daniel dot stelter-gliese at innogames dot de)
+
 - Libxml
   . Fixed bug #63389 (Missing context check on libxml_set_streams_context()
     causes memleak). (Laruence)
